--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html> 
 <head> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Colin-iframe Test</title>
-<style type="text/css">
-    html{overflow:hidden;}
-</style>
+<meta http-equiv="Refresh" content="0; URL=http://119.91.116.5:8080/" />
 </head>
 <body> 
-<iframe src="http://119.91.116.5:8080/login/index" height="100%" width="100%" id="frame_full" frameborder="0" scrolling="auto" ></iframe>
 </body>
 </html>
